<resources>
    <string name="app_name">ThereDotComAndroid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings for updated adventure calculator -->
    <string name="adventure_event">What type of event are you planning?</string>
    <string name="adventure_next">Next</string>
    <string name="adventure_event_other_placeholder">Other - type</string>
    <string name="adventure_date">What day?</string>
    <string name="adventure_return_date">Returning?</string>
    <string name="adventure_date_idk">I Don\'t Know</string>
    <string name="adventure_date_comfort_message">No worries, here are a list of upcoming holidays!</string>
    <string name="adventure_location">Do you know where the event is located?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zip Code</string>
    <string name="adventure_lodging">Where are you staying?</string>
    <string name="hotel">Hotel</string>
    <string name="air_bnb">Air BNB</string>
    <string name="lodging_other">I Have Other Arrangements</string>
    <string name="optional">Optional</string>

    <!-- Strings related to New Adventure -->

    <string name="titleSignIn">Sign In</string>
    <string name="calculator_new_adventure">New Adventure</string>
    <string name="calculator_planned_excursion">Planned Excursion</string>
    <string name="calculator_travel_one">How will you get there?</string>
    <string name="calculator_flight_two">How much is your budget for a flight?</string>
    <string name="calculator_start">Hi, Let\'s get started!</string>
    <string name="calculator_group_size">How many are going?</string>
    <string name="calculator_button_next">NEXT</string>
    <string name="calculator_button_calculate">CALCULATE</string>
    <string name="calculator_button_finish">FINISH</string>
    <string name="calculator_destination">Destination?</string>
    <string name="calculator_hotel_one">Will you be staying in a hotel?</string>
    <string name="calculator_hotel_two">How many nights?</string>
    <string name="calculator_rental_car_one">Hmmmm, is a rental car in your budget?</string>
    <string name="calculator_rental_car_two"></string>
    <string name="calculator_food">What is your food budget?</string>
    <string name="calculator_total_trip">Budget Total</string>
    <string name="calculator_fun_money">Fun Money</string>
    <string name="calculator_button_cost_breakdown">Cost Breakdown</string>
    <string name="calculator_button_save">Save</string>
    <string name="calculator_button_edit">Edit</string>
    <string name="title_activity_planned_excursion">PlannedExcursion</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Planned Excursion -->
    <string name="pe_title">Your Planned Excursions</string>
    <string name="hotel_accordion">Book A Hotel</string>
    <string name="flight_accordion">Book A Flight</string>
    <string name="food_accordion">Find Some Food</string>
    <string name="taxi_accordion">Commute Options</string>
    <string name="sights_accordion">Place You Must Go!</string>
    <string name="todo_status">You\'re All done!</string>

    <!-- Strings related to Account/Registration -->
    <string name="register_name_hint">Name(Optional)</string>
    <string name="register_username_hint">Username</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_button_signup">Sign Up</string>
    <string name="register_button_login">Next</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_adventure">AdventureActivity</string>

</resources>
