<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="android.nni.com.theredotcomandroid.activities.RegistrationActivity"
    tools:showIn="@layout/activity_registration">

    <EditText
        android:id="@+id/registerNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_name_hint"/>

    <EditText
        android:id="@+id/registerUsernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_username_hint"/>

    <EditText
        android:id="@+id/registerEmailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email_hint"/>

    <EditText
        android:id="@+id/registerPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/registerSignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button_signup"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/registerLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button_login"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>


</LinearLayout>
