<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adventure_lodging"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="@dimen/calculator_text_size"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <RadioButton
            android:id="@+id/adventureHotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/adventureAirBnb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_bnb"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/lodgingOtherArrangments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lodging_other"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <ListView
        android:id="@+id/lodgingSuggestionList"
        android:layout_width="match_parent"
        android:layout_height="324dp"
        android:visibility="gone"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/optional"
        android:visibility="visible"
        style="?android:dropDownHintAppearance"/>

    <Button
        android:id="@+id/stepFourNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adventure_next"
        android:textSize="@dimen/calculator_input_text_size"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_gravity="end"
        android:enabled="true"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>
