<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/calculator_margin_left"
    android:layout_marginRight="@dimen/calculator_margin_right"
    android:gravity="center_vertical">

        <Button
            android:id="@+id/buttonNewAdventure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculator_new_adventure" />

        <Button
            android:id="@+id/buttonPlannedExcursion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/calculator_planned_excursion" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/titleSignIn"/>

</LinearLayout>