<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/calculator_margin_left"
    android:layout_marginRight="@dimen/calculator_margin_right"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/calculator_title_size"
        android:text="@string/calculator_new_adventure"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/calculator_hotel_one"
            android:textSize="@dimen/calculator_text_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/lodgingButtonYes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Yes"/>

            <Button
                android:id="@+id/lodgingButtonNo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="No"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/calculator_hotel_two"
            android:textSize="@dimen/calculator_text_size"/>

        <EditText
            android:id="@+id/lodgingNights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/calculator_input_text_size"
            android:inputType="number"
            android:enabled="false"
            android:hint="Number of nights" />

        <EditText
            android:id="@+id/lodgingCostPerNight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/calculator_input_text_size"
            android:inputType="numberDecimal"
            android:enabled="false"
            android:hint="Cost per night" />

        <Button
            android:id="@+id/lodgingNextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/calculator_button_next"
            android:layout_gravity="end"
            android:enabled="false"/>
    </LinearLayout>
</LinearLayout>