<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/calculator_margin_left"
    android:layout_marginRight="@dimen/calculator_margin_right"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/calculator_title_size"
        android:text="@string/calculator_new_adventure"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/calculator_travel_one"
            android:textSize="@dimen/calculator_text_size" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:columnCount="2"
            android:rowCount="2"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/travelCheckboxPlane"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"/>

            <EditText
                android:id="@+id/travelEditPlane"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/calculator_input_text_size"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:hint="Plane" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/travelCheckboxDriving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"/>

            <EditText
                android:id="@+id/travelEditDriving"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/calculator_input_text_size"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:hint="Driving" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/travelCheckboxTrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"/>

            <EditText
                android:id="@+id/travelEditTrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/calculator_input_text_size"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:hint="Train" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/travelCheckboxRail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"/>

            <EditText
                android:id="@+id/travelEditRail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="@dimen/calculator_input_text_size"
                android:enabled="false"
                android:hint="Light Rail" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/travelCheckboxTaxi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"/>

            <EditText
                android:id="@+id/travelEditTaxi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="@dimen/calculator_input_text_size"
                android:enabled="false"
                android:hint="Uber/Lyft/Taxi" />
        </GridLayout>

        <Button
            android:id="@+id/travelButtonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/calculator_button_next"
            android:layout_gravity="end"
            android:enabled="true"/>
    </LinearLayout>
</LinearLayout>
